--- a/roles/catalogue/task/main.yaml
+++ b/roles/catalogue/task/main.yaml
@@ -1,11 +1,5 @@
----
-- name: Configure the Yum Repos 
-  ansible.builtin.shell: curl --silent --location https://rpm.nodesource.com/setup_16.x | sudo bash -
-
-- name: Install NodeJS 
-  ansible.builtin.yum:
-    name: "{{item}}"
-    state: present  
-  loop: 
-    - nodejs 
-    - gcc-c++  
+COMPONENT: catalogue 
+APPUSER: roboshop
+APP_LOCATION: /home/{{APPUSER}}/{{COMPONENT}}/
+LOGLOCATION: /var/log/{{COMPONENT}}.log
+LOGTYPE: json
