--- a/roles/frontend/task/main.yaml
+++ b/roles/frontend/task/main.yaml
@@ -3,11 +3,11 @@
     name: nginx
     state: present
 
-- name: Download and extracting frontend
-  ansible.builtin.narchive:
-    src: https://github.com/stans-robot-project/frontend/archive/main.zip"
-    dest: /tmp
-    remote_scr: yes
+- name: Download and extracting frontend 
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: download
+
 
 
 - name: Copy nginx config 
