--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -4,7 +4,7 @@
     state: present
 
 - name: Download and extracting frontend 
-  ansible.builtin.unarcive:
+  ansible.builtin.unarchive:
     scr: https://github.com/stans-robot-project/frontend/archive/main.zip"
     dest: /tmp
     remote_src: yes
