--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -1,4 +1,4 @@
-- name: Installing Nginx
+- name: Installing nginx
   ansible.builtin.package:
     name: nginx
     state: present
@@ -16,9 +16,9 @@
 
 - name: Copy frontend content to nginx path 
   ansible.builtin.copy:
-     src: /tmp/frontend-main/static/
-     dest: /usr/share/nginx/html/  
-     remote_src: yes  # Source is remote machine as download of the file happened on the remote server.
+    src: /tmp/frontend-main/static/
+    dest: /usr/share/nginx/html/  
+    remote_src: yes  # Source is remote machine as download of the file happened on the remote server.
 
 - name: Copying Roboshop Configuration  
   ansible.builtin.copy:
