--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -5,7 +5,7 @@
 
 - name: Download and extracting frontend 
   ansible.builtin.unarchive:
-    scr: https://github.com/stans-robot-project/frontend/archive/main.zip"
+    scr: "https://github.com/stans-robot-project/frontend/archive/main.zip"
     dest: /tmp
     remote_src: yes
 
