--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -16,25 +16,23 @@
   ansible.builtin.include_role:
     name: common
     tasks_from: download-from-nexus
+ 
+- name: Download and extracting component 
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: download 
 
-# **** Uncomment it when you want to donwload from github *****
+- name: Deleting Old Content
+  ansible.builtin.file:
+    path: /home/roboshop/{{COMPONENT}}
+    state: absent  
 
-# - name: Download and extracting component 
-#   ansible.builtin.include_role:
-#     name: common
-#     tasks_from: download 
-
-# - name: Deleting Old Content
-#   ansible.builtin.file:
-#     path: /home/roboshop/{{COMPONENT}}
-#     state: absent  
-
-# - name: Copy file to destination 
-#   ansible.builtin.copy:
-#     src:  /tmp/{{COMPONENT}}-main/
-#     dest: /home/roboshop/{{COMPONENT}}/
-#     remote_src: yes
-#   become_user: roboshop 
+- name: Copy file to destination 
+  ansible.builtin.copy:
+    src:  /tmp/{{COMPONENT}}-main/
+    dest: /home/roboshop/{{COMPONENT}}/
+    remote_src: yes
+       become_user: roboshop 
 
 - name: Installing dependencies
   ansible.builtin.pip:
