--- a/roles/catalogue/task/main.yaml
+++ b/roles/catalogue/task/main.yaml
@@ -1,5 +1,4 @@
-COMPONENT: catalogue 
-APPUSER: roboshop
-APP_LOCATION: /home/{{APPUSER}}/{{COMPONENT}}/
-LOGLOCATION: /var/log/{{COMPONENT}}.log
-LOGTYPE: json
+- name: Configuring NodeJS Component 
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: nodejs
