--- a/roles/catalogue/task/main.yaml
+++ b/roles/catalogue/task/main.yaml
@@ -1,5 +1,5 @@
 - name: Configuring NodeJS Component 
   ansible.builtin.include_role:
     name: common
-    tasks_from: nodejs
+    tasks: nodejs
 
