--- a/roles/redis/tasks/main.yaml
+++ b/roles/redis/tasks/main.yaml
@@ -5,14 +5,12 @@
      dest: /etc/yum.repos.d/redis.repo 
 
 
-- name: Install Redis
-  hosts: redis.sumanthk.us.to
- 
-  tasks:
-    - name: Update apt cache
-      apt:
-      update_cache: yes
-      become: true
+- name: Install Redis package
+  apt:
+    name: redis-server
+    state: present
+  become: true
+
 
 - name: Install Redis package
   apt:
