--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -18,7 +18,7 @@
   ansible.builtin.include_role:
     name: common
     tasks_from: download
-    
+
 - name: Deleting Old Content
   ansible.builtin.file:
     path: /home/roboshop/{{COMPONENT}}
@@ -30,3 +30,7 @@
     dest: /home/roboshop/{{COMPONENT}}/
     remote_src: yes
   become_user: roboshop 
+
+- name: Installing node.js packages
+  community.general.npm:
+    path: /home/roboshop/{{COMPONENT}}
