--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -37,7 +37,7 @@
 
 - name: Copying the system file
   ansible.builtin.copy:
-     src: system.service
+     src: systemd.servce
      dest: /etc/systemd/system/{{COMPONENT}}.service
 
 - name: Restarting systemd
