--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -38,7 +38,7 @@
 - name: Copying the system file
   ansible.builtin.copy:
      src: systemd.servce
-     dest: /etc/systemd/system/{{COMPONENT}}.servce
+     dest: /etc/systemd/system/systemd.servce
 
 - name: Restarting systemd
   ansible.builtin.systemd:
