--- a/roles/catalogue/files/systemd.service
+++ b/roles/catalogue/files/systemd.service
@@ -3,9 +3,9 @@ Description = Catalogue Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=MONGO_URL="mongodb://mongodb.sumanthk.us.to:27017/catalogue?tls=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false";
+Environment=MONGO_URL="mongodb://mongodb.sumanthk.us.to:27017/catalogue"
 ExecStart=/bin/node /home/roboshop/catalogue/server.js
 SyslogIdentifier=catalogue
 
 [Install]
-WantedBy=multi-user.target 
+WantedBy=multi-user.target
