--- a/roles/redis/tasks/main.yaml
+++ b/roles/redis/tasks/main.yaml
@@ -4,10 +4,11 @@
      src: redis.repo 
      dest: /etc/yum.repos.d/redis.repo 
 
-- name: Installing Redis
+- name: Install Redis package
   ansible.builtin.package:
-    name: redis-6.2.7
-    state: present
+      name: redis-server=6.2.7*
+      state: present
+      become: true
 
 - name: Update Redis Config
   ansible.builtin.replace:
