--- a/roles/redis/tasks/main.yaml
+++ b/roles/redis/tasks/main.yaml
@@ -5,10 +5,10 @@
      dest: /etc/yum.repos.d/redis.repo 
 
 - name: Install Redis package
-  ansible.builtin.package:
-      name: redis-server=6.2.7*
-      state: present
-      become: true
+  ansible.builtin.yum:
+    name: redis-6.2.7
+    state: present
+    become: true
 
 - name: Update Redis Config
   ansible.builtin.replace:
