--- a/roles/redis/tasks/main.yaml
+++ b/roles/redis/tasks/main.yaml
@@ -4,11 +4,10 @@
      src: redis.repo 
      dest: /etc/yum.repos.d/redis.repo 
 
-- name: Install Redis package
+- name: Copying Redis repo
   ansible.builtin.yum:
     name: redis-6.2.7
     state: present
-    become: true
 
 - name: Update Redis Config
   ansible.builtin.replace:
