--- a/roles/redis/tasks/main.yaml
+++ b/roles/redis/tasks/main.yaml
@@ -4,7 +4,7 @@
      src: redis.repo 
      dest: /etc/yum.repos.d/redis.repo 
 
-- name: Copying Redis repo
+- name: Install Redis 6.2.7
   ansible.builtin.yum:
     name: redis-6.2.7
     state: present
