--- a/roles/redis/tasks/main.yaml
+++ b/roles/redis/tasks/main.yaml
@@ -4,9 +4,9 @@
      src: redis.repo 
      dest: /etc/yum.repos.d/redis.repo 
 
-- name: Install Redis 6.2.7
-  ansible.builtin.yum:
-    name: redis-6.2.7
+- name: Install Redis 
+  ansible.builtin.package:
+    name: redis
     state: present
 
 - name: Update Redis Config
