--- a/roles/frontend/files/roboshop.conf
+++ b/roles/frontend/files/roboshop.conf
@@ -12,9 +12,9 @@ location /images/ {
 
 
 
-location /api/catalogue/ { proxy_pass http://localhost:8080/; }
+location /api/catalogue/ { proxy_pass http://catalogue.sumanthk.us.to:8080/; }
 
-location /api/user/ { proxy_pass http://localhost:8080/; }
+location /api/user/ { proxy_pass http://user.sumanthk.us.to:8080/; }
 
 location /api/cart/ { proxy_pass http://localhost:8080/; }
 
