--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -1,4 +1,3 @@
-# This file contains all the tasks related to nodejs components
 - name: Configure the Yum Repos 
   ansible.builtin.shell: curl --silent --location https://rpm.nodesource.com/setup_16.x | sudo bash -
 
@@ -8,46 +7,40 @@
     state: present  
   loop: 
     - nodejs 
-    - gcc-c++  
+    - gcc-c++ 
 
 - name: Creating roboshop user account 
   ansible.builtin.include_role:
     name: common
     tasks_from: create-user 
 
-- name: Downloading the pem key
-  ansible.builtin.get_url:
-    url: https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem
-    dest: /home/roboshop/
-    mode: '0440'
-    owner: roboshop
-    group: roboshop 
+- name: Download and extraing frontend 
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: download
+
+- name: Deleting Old Content
+  ansible.builtin.file:
+    path: /home/roboshop/{{COMPONENT}}
+    state: absent 
+
+- name: Copy file to destination
+  ansible.builtin.copy:
+    src: /tmp/{{COMPONENT}}-main/
+    dest: /home/roboshop/{{COMPONENT}}/
+    remote_src: yes
+  become_user: roboshop 
 
 - name: Installing node.js packages
   community.general.npm:
     path: /home/roboshop/{{COMPONENT}}
 
-- name: Configuring the service 
+- name: Config the service 
   ansible.builtin.include_role:
     name: common
-    tasks_from: config-service 
-
-- name: Configuring the rsyslog 
-  ansible.builtin.include_role:
-    name: elk 
-    tasks_from: rsyslog  
-
-- name: Installing the filebeat 
-  ansible.builtin.include_role:
-    name: elk 
-    tasks_from: filebeat   
-
-- name: Installing the NodeExporter  
-  ansible.builtin.include_role:
-    name: prometheus 
-    tasks_from: node-exporter   
+    tasks_from: create-user    
 
 - name: Doing set-hostname 
   ansible.builtin.include_role:
     name: common
-    tasks_from: set-hostname
+    tasks_from: set-hostname    
