--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -1,6 +1,6 @@
-- name: Coping MySQL repo 
+- name: Copy Mysql repo file 
   ansible.builtin.copy:
-    src: mysql.repo
+    src: mysql.repo  
     dest: /etc/yum.repos.d/mysql.repo
 
 - name: Install MySQL Server
