--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -32,7 +32,7 @@
 
     - name: copy MySQL password reset file
       ansible.builtin.copy:
-        src: root_password.sql
+        src: root_password.mysql
         dest: /tmp/root_password.sql
 
     - name: Restart MySQL Default password
