--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -39,4 +39,17 @@
       ansible.builtin.shell: mysql --connect-expired-password -uroot -p"{{DEFAULT_ROOT_PASSWORD.stdout}}" < /tmp/root_password.sql
       register: DEFAULT_ROOT_PASSWORD
 
+- name: Checking password validate Plugin
+  ansible.builtin.shell: echo show plugins; | mysql -uroot -pRobosohp@1  | grep validate_password
+  register: PLUGIN_INFO
+  ignore_errors: yes
 
+- name: uninstall password validate Plugin
+  when: PLUGIN_INFO.rc ==0
+  block:
+      - name: Checking password validate command
+        ansible.builtin.copy:
+         src: password_validate.mysql
+         dest: /tmp/password_validate.repo
+      - name: Uninstall password validate Plugin
+        ansible.builtin.shell: mysql  --connect-expired-password -uroot -pRobosohp@1 < /tmp/root_password.sql
