--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -50,7 +50,7 @@
       - name: Checking password validate command
         ansible.builtin.copy:
          src: password_validate.mysql
-         dest: /tmp/password_validate.repo
+         dest: /tmp/password_validate.mysql
 
       - name: Uninstall password validate Plugin
         ansible.builtin.shell: mysql  --connect-expired-password -uroot -pRobosohp@1 < /tmp/root_password.sql
