--- a/roles/common/tasks/create-user.yaml
+++ b/roles/common/tasks/create-user.yaml
@@ -4,9 +4,6 @@
     comment: roboshop project application user 
   register: APP_USER_INFO
 
-- name: Installing boto3 and botocore needed for aws secret lookup 
-  ansible.builtin.pip:
-    name: 
-      - botocore
-      - boto3   
-    executable: pip3
+- name: prinint the app user app use info 
+  debugg:
+    msg: "{{APP_USER_INFO}}"
